--- a/src/components/Sass/pages/_home.scss
+++ b/src/components/Sass/pages/_home.scss
@@ -57,7 +57,6 @@
     &-container {
         background: $color-light-grey;
         padding: 1rem 3rem;
-        width: 100vw;
         &:last-child {
             padding: 0 3rem 1rem;
         }
@@ -65,7 +64,6 @@
 }
 .wrap_container {
     background: $color-light-grey;
-    width: 100vw;
     padding: 0 3rem;
     
     .dashboard {
